--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,15 @@ figcaption{
     display: block;
     float: left;
     position: absolute;
+    bottom: 15px;
+    padding-right: 137px;
+    text-align: center;
 }
 
 figure{
     float: left;
     overflow: auto;
+    position: relative;
 }
 
 h1,h2,h3,h4,h5,h6{
