--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,10 @@ figure{
     position: relative;
 }
 
-footer{
+/* footer{
     position: fixed;
     bottom: 0;
-}
+} */
 
 h1,h2,h3,h4,h5,h6{
     color: #4aaaa5;
