Changed height to auto for container div NOTE TO SELF: Remember to be careful assigning a value to both the height and width of an element.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ p{
 
 .container{
     width: 960px;
-    height: 400px;
+    height: auto;
     background-color: #ffffff;
     margin: 0 auto;
     margin-top: 20px;
