--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    background-color: #EFEFEF;
+    background-color: #dddddd;
 
 }
 
@@ -21,11 +21,6 @@ figure{
     overflow: auto;
     position: relative;
 }
-
-/* footer{
-    position: fixed;
-    bottom: 0;
-} */
 
 h1,h2,h3,h4,h5,h6{
     color: #4aaaa5;
@@ -76,9 +71,10 @@ p{
     color: white;
     background-color: #4aaaa5;
     text-decoration: none;
-    padding: 20px;
+    padding: 15px;
     font-size: 35px;
     font-weight: bold;
+    
 
 }
 
@@ -103,11 +99,11 @@ p{
 #copyright-text{
     background-color: #666666;
     color: white;
-    border-top: #4aaaa5 solid 2px;
+    border-top: #4aaaa5 solid 5px;
     display: block;
     text-align: center;
-    /* position: fixed;
-    bottom: 0; */
+    bottom: 0;
+    position: sticky;
 }
 
 #contact-submit-button, #contact-reset-button{
@@ -119,9 +115,10 @@ p{
 #profile-photo{
     float: left;
     overflow: auto;
-    width: 10%;
+    width: 15%;
     height: auto;
     margin-right: 10px;
+    margin-left: 5px;
 
 }
 
