--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,33 @@
 body{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-color: #dddddd;
+    margin: 0;
 
 }
 
 figcaption{
     color: #ffffff;
     background-color: #4aaaa5;
-    padding: 15px;
+    padding: 15px 0px 15px 0px;
     display: block;
     float: left;
     position: absolute;
     bottom: 15px;
-    padding-right: 137px;
     text-align: center;
+    width: 100%;
+    margin-bottom: 25px;
 }
 
 figure{
     float: left;
     overflow: auto;
     position: relative;
+}
+
+footer{
+    position: fixed;
+    width: 100%;
+    bottom: 25px;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -31,6 +39,10 @@ h1,h2,h3,h4,h5,h6{
 header{
     background-color: #ffffff;
     border-bottom: #cccccc 2px solid;
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
+    top: 25px;
 }
 
 hr{
@@ -61,9 +73,9 @@ p{
     width: 960px;
     height: auto;
     background-color: #ffffff;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 60px;
+    margin: 200px auto 200px auto;
+    /* margin-top: 20px;
+    margin-bottom: 60px; */
 
 }
 
@@ -99,11 +111,12 @@ p{
 #copyright-text{
     background-color: #666666;
     color: white;
-    border-top: #4aaaa5 solid 5px;
+    border-top: #4aaaa5 solid 10px;
     display: block;
     text-align: center;
     bottom: 0;
     position: sticky;
+    padding-top: 15px;
 }
 
 #contact-submit-button, #contact-reset-button{
